--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Hepta+Slab:500|Roboto+Slab:300&display=swap');
 
 .idisc-logo {
+    margin-left: 2%;
     font-family: 'Hepta Slab', serif;
-    font-style: italic;
+    font-style: italic;    
+}
+.idisc-logo::first-letter {
+    color: #f57f17;
 }
