--- a/public/src/styles/materialize/css/materialize.css
+++ b/public/src/styles/materialize/css/materialize.css
@@ -4878,6 +4878,7 @@ small {
 .card .card-content {
   padding: 24px;
   border-radius: 0 0 2px 2px;
+  /* background-color: #eeeeee;  */
 }
 
 .card .card-content p {
@@ -5311,8 +5312,8 @@ small {
 
 .btn-floating.halfway-fab {
   position: absolute;
-  right: 24px;
-  bottom: -20px;
+  right: 0px;
+  bottom: -22px;
 }
 
 .btn-floating.halfway-fab.left {
