render scorecards (fixed data)

--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Hepta+Slab:500&display=swap');
+
+.idisc-logo {
+    margin-left: 2%;
+    font-family: 'Hepta Slab', serif;
+    font-style: italic;    
+}
+.idisc-logo::first-letter {
+    color: #f57f17;
+}
+
 section li.idisc-bulleted {
     list-style-type: disc;
     margin-left: 1.5em;
