--- a/public/src/styles/materialize/css/materialize.css
+++ b/public/src/styles/materialize/css/materialize.css
@@ -7527,7 +7527,7 @@ input[type=range]::-ms-thumb {
 
 .sidenav {
   position: fixed;
-  width: 300px;
+  width: 70%;
   left: 0;
   top: 0;
   margin: 0;
